# ffmpeg-arcana-cmake

./: .gitignore  CMakeLists.txt  README.md
ffmpeg_arcana/: CMakeLists.txt
ffmpeg_arcana/cmake_include/: copy_headers.cmake  create_ffmpeg_options_file.cmake  ffmpeg.cmake  ffmpeg_build_system.cmake  post_install.cmake  postprocess.cmake
